2010-04-17  Jan Djärv  <jan.h.d@swipnet.se>

	* xlwmenu.c: Include Shell.h, remove duplicate declaration of
	XlwMenuRedisplay.
	(display_menu_item): Replace ws->window with ws->pixmap, remove
	call to XftDrawRect.
	(display_menu): Remove this and that argument.  Remove
	just_compute_this_one_p. Fill pixmap at start and copy it to window
	at end.
	(expose_cb): New function.
	(make_windows_if_needed): Replace XCreateWindow with XtCreatePopup.
	Add eventhandler for expose to expose_cb.  Remove creation of
	xft_draw.
	(create_pixmap_for_menu): New function.
	(remap_menubar): Pop down menus that aren't the same as in old_stack.
	Set width, heigh, x, y on widget with XtVaSetValues.  Call
	create_pixmap_for_menu.
	Replace XUnmapWindow with XtPopdown.
	Remowe two last parameters to display_menu.
	(map_event_to_widget_value, XlwMenuRedisplay, Key, Select)
	(pop_up_menu): Remowe two last parameters to display_menu.
	(XlwMenuRealize): Call create_pixmap_for_menu, set w and pixmap.
	Remove call to XftDrawCreate.
	(XlwMenuDestroy): Free pixmap.  Call XtDestroyWidget instead of
	XDestroyWindow.
	(handle_motion_event): Only call handle_single_motion_event once.
	(set_window_type): New function.
	(make_windows_if_needed, XlwMenuRealize): Call set_window_type.

	* xlwmenuP.h (window_state): Add pixmap and w.

2010-04-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xlwmenu.c (facename_changed): Put function in #ifdef HAVE_XFT.

2010-04-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in (C_SWITCH_SYSTEM, C_SWITCH_MACHINE)
	(C_SWITCH_X_SITE): Define using autoconf.

2010-04-11  Jan Djärv  <jan.h.d@swipnet.se>

	* lwlib-Xaw.c (widget_xft_data): New for Xft data.
	(fill_xft_data, openFont, get_text_width_and_height)
	(draw_text, set_text, find_xft_data, command_press)
	(command_reset): New functions.
	(xaw_update_one_widget): Call set_text for dialog and buttons
	if HAVE_XFT.  Also set internalHeight for buttons.
	(xaw_destroy_instance): Free all Xft related data.