@@ -1,3 +1,8 @@
+2010-04-21  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* xlwmenu.c (expose_cb):
+	* lwlib-Xaw.c (fill_xft_data): Declarations before code.
+
 2010-04-17  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* xlwmenu.c: Include Shell.h, remove duplicate declaration of
